# firelens

./: .gitignore  README.md  pyproject.toml
src/firelens/: grid.py  store_init.py  time_axis.py
src/firelens.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/firelens/met/: aorc.py  hrrr.py  writer.py
src/firelens/pipelines/: build_static_tifs.py  ingest_aorc.py  ingest_hrrr.py  ingest_landfire.py  ingest_static_group.py  ingest_viirs.py  init_california_500m_context_zarr.py  init_met_500m_1h_zarr.py  init_satfire_500m_15min_zarr.py
src/firelens/satfire/: viirs.py
src/firelens/slow_context/: landfire_canopy.py  landfire_catalog.py  landfire_fbfm40.py  landfire_fdist.py  outputs.py  raster.py  vintage.py  writer.py
src/firelens/static/: aggregate.py  terrain.py  writer.py
